# cpp_into

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt
include/into/: into.h
include/into/core/: cast.h  concepts.h  error.h  traits.h
include/into/strategies/: chrono.h  enum.h  identity.h  implicit.h  numeric.h  optional.h  string.h  tuple.h  variant.h
test/: CMakeLists.txt  test_chrono.cpp  test_enum.cpp  test_error.cpp  test_identity.cpp  test_implicit.cpp  test_numeric.cpp  test_optional.cpp  test_string.cpp  test_tuple.cpp  test_variant.cpp
