function(cpp_into_add_test NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_link_libraries(${NAME} cpp_into::cpp_into GTest::gtest_main)
    target_compile_options(${NAME} PRIVATE -Wall -Wextra -pedantic)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

cpp_into_add_test(test_identity)
cpp_into_add_test(test_implicit)
cpp_into_add_test(test_numeric)
cpp_into_add_test(test_string)
cpp_into_add_test(test_enum)
cpp_into_add_test(test_optional)
cpp_into_add_test(test_chrono)
cpp_into_add_test(test_error)
cpp_into_add_test(test_variant)
cpp_into_add_test(test_tuple)
